# infrastructure

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  improc_compilation_variables.hpp.in  vcpkg.json
.github/workflows/: cmake_build.yml  codacy-coverage-reporter.yml  codeql.yml  cpp_artifacts.yml  cpp_artifacts_ubuntu.yml  cpp_artifacts_windows.yml  cpp_build_test.yml  cpp_build_test_ubuntu.yml  cpp_build_test_windows.yml
cmake/: improc_infrastructure.pc.in  improc_infrastructure_config.cmake.in
doc/: doxyfile_config.in
docs/: CMakeLists.txt  doxyfile.in  doxyfile_config.in
docs/sphinx/: conf.py  index.rst
docs/sphinx/improc_infrastructure/: improc_infrastructure.rst  index.rst
include/improc/: exception.hpp  improc_defs.hpp  improc_function_traits.hpp  improc_type_traits.hpp
include/improc/infrastructure/: benchmark_singleton.hpp  environment_context.hpp  file.hpp  folder.hpp  folder_policies.hpp  json_parser.hpp  jsonfile_parser.hpp  logger_infrastructure.hpp  logger_singleton.hpp  math.hpp  math_utils.hpp  string.hpp
include/improc/infrastructure/benchmark/: benchmark_singleton.hpp  benchmark_singleton.tpp
include/improc/infrastructure/context/: application_context.hpp  environment_context.hpp  environment_context.tpp
include/improc/infrastructure/filesystem/: file.hpp  file.tpp  folder.hpp  folder_policies.hpp  folder_policies.tpp
include/improc/infrastructure/logging/: logger_infrastructure.hpp  logger_singleton.hpp  logger_singleton.tpp
include/improc/infrastructure/math/: math.hpp  math.tpp
include/improc/infrastructure/parsers/: json_parser.hpp  json_parser.tpp
src/: application_context.cpp  benchmark_singleton.tpp  environment_context.tpp  file.cpp  folder.cpp  folder_policies.tpp  json_parser.tpp  jsonfile_parser.tpp  logger_singleton.tpp  math.tpp  math_utils.tpp  string.cpp
test/: CMakeLists.txt  improc_infrastructure_test_config.hpp.in  test_app_context.cpp  test_benchmark.cpp  test_benchmark_singleton.cpp  test_env_context.cpp  test_exception.cpp  test_file.cpp  test_folder.cpp  test_json_parser.cpp  test_logger.cpp  test_logger_infrastructure.cpp  test_logger_singleton.cpp  test_math.cpp  test_math_utils.cpp  test_string.cpp
test/data/: filepath.json  json_parser_types.json  test.json
version/: CMakeLists.txt  main.cpp  version_config.hpp.in
versions/: baseline.json
versions/i-/: improc-infrastructure.json
